--- a/templates/search/IdSearch.html
+++ b/templates/search/IdSearch.html
@@ -25,7 +25,7 @@
             {% csrf_token %}
             <div class="form-row">
                 <div class="col-8">
-                    <input class="form-control mr-sm-2" style="background-color:rgba(0, 0, 0, 0);color: white;"
+                    <input id="keyWords" class="form-control mr-sm-2" style="background-color:rgba(0, 0, 0, 0);color: white;"
                         type="search" placeholder="Search" aria-label="Search" name="id">
                 </div>
                 <div class="col-2">
@@ -33,6 +33,7 @@
                         style="color :white; background-color: rgba(0, 0, 0, 0);">
                         <option>Picture ID</option>
                         <option>Artist ID</option>
+                        <option>Picture keywords</option>
                     </select>
                 </div>
                 <div class="col-2">
